// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a valid App item in view mode 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Scorecard
    </p>
    <div
      class="itemHeaderRightWrap"
    />
  </div>
  <div
    class="ui-Divider"
  />
  <iframe
    class="dashboard-item-content"
    src="launchurl?dashboardItemId=rainbowdash"
    title="Scorecard"
  />
</div>
`;

exports[`renders a valid App item with filter in edit mode 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Scorecard
    </p>
    <div
      class="itemHeaderRightWrap"
    >
      <div
        class="itemActionsWrap"
      >
        <div
          class="DeleteItemButton"
        />
      </div>
    </div>
  </div>
  <div
    class="ui-Divider"
  />
  <iframe
    class="dashboard-item-content"
    src="launchurl?dashboardItemId=rainbowdash"
    title="Scorecard"
  />
</div>
`;

exports[`renders a valid App item with filter in view mode 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      Scorecard
    </p>
    <div
      class="itemHeaderRightWrap"
    />
  </div>
  <div
    class="ui-Divider"
  />
  <iframe
    class="dashboard-item-content"
    src="launchurl?dashboardItemId=rainbowdash&userOrgUnit=rainbow"
    title="Scorecard"
  />
</div>
`;

exports[`renders a valid App item with title in edit mode irrespective of app settings 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      No Title
    </p>
    <div
      class="itemHeaderRightWrap"
    >
      <div
        class="itemActionsWrap"
      >
        <div
          class="DeleteItemButton"
        />
      </div>
    </div>
  </div>
  <div
    class="ui-Divider"
  />
  <iframe
    class="dashboard-item-content"
    src="launchurl?dashboardItemId=twilightsparkle"
    title="No Title"
  />
</div>
`;

exports[`renders a valid App item without title in view mode if specified in app settings 1`] = `
<div>
  <iframe
    class="dashboard-item-content-hidden-title"
    src="launchurl?dashboardItemId=twilightsparkle"
    title="No Title"
  />
</div>
`;

exports[`renders an invalid App item 1`] = `
<div>
  <div
    class="itemHeaderWrap"
  >
    <p
      class="itemTitle"
    >
      unknownApp app not found
    </p>
    <div
      class="itemHeaderRightWrap"
    />
  </div>
  <div
    class="ui-Divider"
  />
  <div
    class="dashboard-item-content"
    style="display: flex; justify-content: center; align-items: center; height: 90%;"
  >
    <svg
      color="#a0adba"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2zm0 2a8 8 0 100 16 8 8 0 000-16zm0 12a1 1 0 110 2 1 1 0 010-2zm0-10a4 4 0 011.155 7.83l-.155.043V15h-2v-3h1a2 2 0 10-1.995-2.15L10 10H8a4 4 0 014-4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
